[gd_scene load_steps=3 format=3 uid="uid://d2dr7q1oycv3m"]

[ext_resource type="Script" path="res://Scripts/Systems/Dialog/DialogViews.gd" id="1_isrco"]
[ext_resource type="Texture2D" uid="uid://tcevpv5xoyq4" path="res://Assets/portraits/photobooth-in-white-cap.jpg" id="2_7rlwc"]

[node name="DialogUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_isrco")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(255, 226.02)
scale = Vector2(0.510204, 0.510204)
texture = ExtResource("2_7rlwc")

[node name="ActorDetails" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 70.0204
offset_right = 618.0
offset_bottom = 147.02

[node name="NameLabel" type="Label" parent="ActorDetails"]
layout_mode = 2
text = "Name: Archer Bobson"

[node name="OccupationLabel" type="Label" parent="ActorDetails"]
layout_mode = 2
text = "Occupation: Streetsweep"

[node name="Label" type="Label" parent="ActorDetails"]
layout_mode = 2
text = "Disposition: Friendly"

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 0
offset_left = 143.0
offset_top = 445.02
offset_right = 706.0
offset_bottom = 1008.02

[node name="DialogVBox" type="VBoxContainer" parent="DialogBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -9.0
offset_top = 4.0
offset_right = 559.0
offset_bottom = 569.0

[node name="NotebookBox" type="Panel" parent="."]
layout_mode = 0
offset_left = 766.0
offset_top = 453.0
offset_right = 1205.0
offset_bottom = 1013.0

[node name="NotebookVBox" type="VBoxContainer" parent="NotebookBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 59.0
offset_top = 33.0
offset_right = 355.0
offset_bottom = 523.0
